# speakcode

./: CMakeLists.txt  README.md  implementation.txt  input_handling.cpp
doc/: implementation.md  research_symposium  research_symposium.md  touch
include/: input_handling.h  recording.h  state.h
src/: recording.cpp  speakcode.cpp  state.cpp
